--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,6 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# for react navigation
+android.nonTransitiveRClass=true
