--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+
 buildscript {
     ext {
         buildToolsVersion = "34.0.0"
@@ -16,6 +17,15 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
     }
+}
+
+rootProject.allprojects {
+  repositories {
+    maven {
+		 	url 'https://www.jitpack.io' 
+			url 'https://devrepo.kakao.com/nexus/content/groups/public/'
+    }
+  }
 }
 
 apply plugin: "com.facebook.react.rootproject"
