--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,4 +39,6 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
-FLIPPER_VERSION=0.145.0
+RNKakaoLogins_kakaoSdkVersion=2.20.1
+
+
