--- a/ios/EatFluencer/Info.plist
+++ b/ios/EatFluencer/Info.plist
@@ -27,7 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>6bc1808c1066e950fdd738862a5cc325</string>
+				<string>kakao6bc1808c1066e950fdd738862a5cc325</string>
 			</array>
 		</dict>
 	</array>
@@ -38,7 +38,7 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>kakaokompassauth</string>
-		<string>storykompassauth</string>
+		<string>kakaoplus</string>
 		<string>kakaolink</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
